.provarCaches/00D6C0000000xA6UAI/objects/redwing__CheckIn__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__CheckIn_Location__c</fullName>
        <inlineHelpText>Latitude/Longitude for the check-in location</inlineHelpText>
        <label>CheckIn Location</label>
        <required>true</required>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>redwing__Description_RTA__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Check-Ins</relationshipLabel>
        <relationshipName>CheckIns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Mile_Radius__c</fullName>
        <defaultValue>0.020</defaultValue>
        <inlineHelpText>Mile radius around the specified latitude/longitude for users to do a valid check-in</inlineHelpText>
        <label>Mile Radius</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Check-In</label>
    <nameField>
        <displayFormat>CHI-{000000}</displayFormat>
        <label>Check-In ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check-Ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>